# eye-tracker-validation

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Readme.md
.github/workflows/: cmake-multi-platform.yml
TrackerValidation/: .gitignore  CMakeLists.txt  CircleTarget.cpp  CircleTarget.h  CrosshairBullseyeTarget.cpp  CrosshairBullseyeTarget.h  CursorPosition.cpp  CursorPosition.h  DummyTrackerCollector.cpp  DummyTrackerCollector.h  Eyelink1000PlusCollector.cpp  Eyelink1000PlusCollector.h  FixationTarget.cpp  FixationTarget.h  GazepointGP3Collector.cpp  GazepointGP3Collector.h  ManualScreenPosition.cpp  ManualScreenPosition.h  MeasuredData.cpp  MeasuredData.h  MeasuredDataFile.cpp  MeasuredDataFile.h  MeasuredDataStream.cpp  MeasuredDataStream.h  OpenGLCommon.cpp  OpenGLCommon.h  ScreenPositionStore.cpp  ScreenPositionStore.h  ThreadTrackerCollector.cpp  ThreadTrackerCollector.h  TrackerConfig.cpp  TrackerConfig.h  TrackerDataCollector.cpp  TrackerDataCollector.h  TrackerValidation.cpp  Validator.cpp  Validator.h  ValidatorConfig.cpp  ValidatorConfig.h  ValidatorUI.cpp  (+6 more)
TrackerValidation/eyelink/: .gitignore  dummy.cpp
TrackerValidation/freeglut-3.2.1/: .gitignore  CMakeLists.txt
TrackerValidation/gazepoint/: CMakeLists.txt  GPClient.cpp  GPClient.h  stdafx.cpp  stdafx.h  template.cpp
TrackerValidation/test/: MeasuredData.test.cpp  ScreenPositionStore.test.cpp  UnitTests.cpp  ValidatorConfig.test.cpp
analysis/: 44.csv  57.csv  analyze_single_subject.py  collate_results.ps1  dual_gp3_all_results.csv  dual_gp3_specs_only.csv  gp3_top_bottom_1.csv  gp3_top_bottom_2.csv  gp3_top_bottom_3.csv  gp3_top_bottom_4.csv  gp3_top_bottom_mf_1.csv  gp3_top_bottom_mf_2.csv  gp3_top_bottom_mf_3.csv  gp3_top_bottom_mf_4.csv  specs_test.csv
